--- a/revision/index.html
+++ b/revision/index.html
@@ -59,12 +59,12 @@
 
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" href="">contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="#footer">Contact</a></li>
               <li class="nav-item">
-                <a class="nav-link" href="">testimonials</a>
+                <a class="nav-link" href="#firstcarousel">Testimonials</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">downlodes</a>
+                <a class="nav-link" href="">Help</a>
               </li>
             </ul>
           </div>
