changed nav contant

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <a class="nav-link" href="">testimonials</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">downlodes</a>
+                <a class="nav-link" href="">downlaodes</a>
               </li>
             </ul>
           </div>
