download is disabled and  href was updated

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 
           <div class="collapse navbar-collapse" id="navbar">
             <ul class="navbar-nav ms-auto">
-              <li class="nav-item"><a class="nav-link" href="">contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="#footer">contact</a></li>
               <li class="nav-item">
-                <a class="nav-link" href="">testimonials</a>
+                <a class="nav-link" href="#second-container">testimonials</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="">downlaodes</a>
+                <a style="pointer-events: none" class="nav-link" href="">downlaodes</a>
               </li>
             </ul>
           </div>
